--- a/client/src/components/navbar/style.css
+++ b/client/src/components/navbar/style.css
@@ -4,3 +4,14 @@
     width:100%;
     background-color: #333;
 }
+
+.right{
+    position: relative;
+    float:right;
+    margin-top:3.7vh;
+    margin-right:3vw;
+    color:white;
+    font-size: 20px;
+}
+
+ 
