--- a/client/src/components/navbar/style.css
+++ b/client/src/components/navbar/style.css
@@ -14,4 +14,12 @@
     font-size: 20px;
 }
 
+ .left img{
+     margin-left:3vw;
+     margin-top:1.5vh;
+     height: 9vh;
+     float:left;
+     
+ }
+
  
