--- a/client/src/components/response/style.css
+++ b/client/src/components/response/style.css
@@ -1,6 +1,33 @@
-form {
-    max-width: 70vw;
-}
-textarea {
-        min-height: 14rem;
-}
+.response-container {
+    border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 20px;
+        font-size: 22px;
+        font-weight: 200;
+    }
+ .response-container input[type=text], select, textarea {
+        width: 100%;
+        padding: 12px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+        margin-top: 6px;
+        margin-bottom: 16px;
+        resize: vertical;
+        font-size: 18px;
+    }
+    
+.response-container input[type=submit] {
+        background-color: #4CAF50;
+        font-size: 18px;
+        color: white;
+        padding: 15px 24px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+    
+.response-container input[type=submit]:hover {
+        background-color: #45a049;
+    }
+  
